--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "title": "freeboard",
   "version": "1.1.3",
   "devDependencies": {
-    "connect": "^3.6.6",
     "grunt": "0.4.1",
     "grunt-contrib-concat": "0.1.3",
     "grunt-contrib-cssmin": "0.6.1",
     "grunt-contrib-uglify": "0.6.0",
     "grunt-contrib-watch": "0.5.3",
-    "grunt-string-replace": "^0.2.7",
+    "grunt-string-replace": "^0.2.7"
+  },
+  "dependencies": {
+    "connect": "^3.6.6",
     "serve-static": "^1.13.2"
   }
 }
